--- a/style/style.scss
+++ b/style/style.scss
@@ -26,17 +26,106 @@ input,
 textarea,
 button {
     margin: 0;
+    padding: 0;
+    outline: none;
 }
 
 body {
     width: 100vw;
     height: 100vh;
+    font-weight: normal;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: black;
     font-family: "Bodoni";
+}
+
+// navigation
+nav {
+    background-color: $primary-color;
+    width: 4vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    position: fixed;
+    left: 0;
+    z-index: 1;
+
+    // liste of links
+    ul {
+        font-size: $nav-text-size;
+        padding: 0;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        list-style-type: none;
+        text-transform: uppercase;
+
+        // list items
+        li {
+            text-align: center;
+            writing-mode: vertical-rl;
+            transform: rotateZ(180deg);
+
+            &:nth-child(2) {
+                text-decoration: line-through;
+            }
+
+            &:nth-child(4) {
+                transform: rotate(0);
+                font-size: $title-h3;
+            }
+
+            // reset link style
+            a {
+                color: black;
+                text-decoration: none;
+            }
+        }
+    }
+}
+
+// footer
+footer {
+    width: 100vw;
+    height: 4vw;
+    position: fixed;
+    bottom: 0%;
+    background-color: $primary-color;
+
+    // liste of links
+    ul {
+        font-size: $nav-text-size;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: space-evenly;
+        list-style-type: none;
+        text-transform: uppercase;
+
+        // list items
+        li {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            &:nth-child(2) {
+                font-size: $title-h3;
+                letter-spacing: 2px;
+            }
+
+            // reset link style
+            a {
+                color: black;
+                text-decoration: none;
+            }
+        }
+    }
 }
 
 // dark filter
@@ -75,51 +164,6 @@ body {
 // home page
 #home-page {
     justify-content: flex-start;
-
-    // navigation
-    nav {
-        background-color: $primary-color;
-        width: 4vw;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        position: fixed;
-        left: 0;
-
-        // liste of links
-        ul {
-            font-size: $nav-text-size;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            list-style-type: none;
-            text-transform: uppercase;
-
-            // list items
-            li {
-                text-align: center;
-                writing-mode: vertical-rl;
-                transform: rotateZ(180deg);
-
-                &:nth-child(2) {
-                    text-decoration: line-through;
-                }
-
-                &:nth-child(4) {
-                    transform: rotate(0);
-                }
-
-                // reset link style
-                a {
-                    color: black;
-                    text-decoration: none;
-                }
-            }
-        }
-    }
 
     // main
     main {
@@ -190,7 +234,7 @@ body {
 
         h3 {
             color: $primary-color;
-            margin-top: $medium-margin;
+            margin-top: $large-margin;
             font-size: $title-h3;
             text-transform: uppercase;
             position: relative;
@@ -203,6 +247,324 @@ body {
                 position: absolute;
                 left: -200%;
                 top: 50%;
+            }
+        }
+
+        #img-box {
+            width: 70%;
+            height: 35vh;
+            display: flex;
+            justify-content: space-between;
+            margin: $large-margin 0;
+
+            img {
+                height: 100%;
+            }
+
+            .img-box-child {
+                position: relative;
+
+                #frame-left {
+                    border: 4px solid $primary-color;
+                    width: 100%;
+                    height: 95%;
+                    position: absolute;
+                    top: -10%;
+                    left: -12%;
+                    z-index: -2;
+                }
+
+                #frame-right {
+                    border: 4px solid $primary-color;
+                    width: 100%;
+                    height: 95%;
+                    position: absolute;
+                    bottom: -10%;
+                    right: -12%;
+                    z-index: -2;
+                }
+            }
+        }
+    }
+}
+
+// contact page
+#contact-page {
+    justify-content: flex-start;
+
+    // main
+    main {
+        width: 96vw;
+        position: absolute;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        // title
+        h1 {
+            color: $primary-color;
+            font-size: $title-h1;
+            font-family: $title-font;
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 0.5vw;
+            font-weight: normal;
+            text-align: center;
+            margin-top: $medium-margin;
+        }
+
+        #presentation {
+            margin-top: $medium-margin;
+            width: 70%;
+            display: flex;
+            justify-content: space-between;
+
+            #presentation-img-box {
+                width: 30%;
+                position: relative;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            article {
+                width: 60%;
+                color: $primary-color;
+
+                h2 {
+                    font-size: $title-h2;
+                    text-align: center;
+                    text-transform: uppercase;
+                }
+
+                p {
+                    margin-top: $medium-margin;
+                    font-size: $text-size;
+                    position: relative;
+                    background-color: black;
+                    border: 10px solid black;
+
+                    span {
+                        border: 4px solid $primary-color;
+                        width: 100%;
+                        height: 85%;
+                        position: absolute;
+                        z-index: -1;
+                        top: -8%;
+                        left: -6%;
+                    }
+                }
+            }
+        }
+
+        h3 {
+            color: $primary-color;
+            margin-top: $medium-margin;
+            font-size: $title-h3;
+            text-transform: uppercase;
+            position: relative;
+            width: 70%;
+            text-align: right;
+
+            span {
+                background-color: $primary-color;
+                width: 294%;
+                height: 1px;
+                display: block;
+                position: absolute;
+                left: -200%;
+                top: 50%;
+            }
+        }
+
+        form {
+            margin-top: $medium-margin;
+            margin-bottom: $large-margin;
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            #infos {
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                margin-bottom: $medium-margin;
+
+                .input-box {
+                    display: flex;
+                    flex-direction: column;
+                    width: 45%;
+    
+                    label {
+                        color: $primary-color;
+                        font-size: $text-size;
+                        margin-bottom: 1vh;
+                        text-transform: uppercase;
+                    }
+
+                    input {
+                        border: none;
+                        border-bottom: 2px solid $primary-color;
+                        background-color: transparent;
+                        width: 100%;
+                    }
+                }
+            }
+
+            label {
+                color: $primary-color;
+                font-size: $text-size;
+                text-transform: uppercase;
+            }
+            
+            textarea {
+                width: 100%;
+                border: none;
+                border-bottom: 2px solid $primary-color;
+                background-color: transparent;
+                caret-color: $primary-color;
+            }
+
+            button {
+                color: $primary-color;
+                background-color: transparent;
+                border: none;
+                text-transform: uppercase;
+                font-size: $text-size;
+                font-family: 'Bodoni';
+                margin-top: $small-margin;
+            }
+        }
+    }
+}
+
+
+
+// home page
+#cv-page {
+    justify-content: flex-start;
+
+    // main
+    main {
+        width: 96vw;
+        position: absolute;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        // title
+        h1 {
+            color: $primary-color;
+            font-size: $title-h1;
+            font-family: $title-font;
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: 0.5vw;
+            font-weight: normal;
+            text-align: center;
+            margin-top: $medium-margin;
+        }
+
+        #cv {
+            margin-top: $medium-margin;
+            width: 70%;
+            display: flex;
+            justify-content: space-between;
+
+            #presentation-img-box {
+                width: 30%;
+                position: relative;
+
+                img {
+                    width: 100%;
+                }
+            }
+
+            article {
+                width: 60%;
+                color: $primary-color;
+
+                h2 {
+                    font-size: $title-h2;
+                    text-align: center;
+                    text-transform: uppercase;
+                }
+
+                p {
+                    margin-top: $medium-margin;
+                    font-size: $text-size;
+                    position: relative;
+                    background-color: black;
+                    border: 10px solid black;
+
+                    span {
+                        border: 4px solid $primary-color;
+                        width: 100%;
+                        height: 85%;
+                        position: absolute;
+                        z-index: -1;
+                        bottom: -8%;
+                        left: -6%;
+                    }
+                }
+            }
+        }
+
+        h3 {
+            color: $primary-color;
+            margin-top: $large-margin;
+            font-size: $title-h3;
+            text-transform: uppercase;
+            position: relative;
+
+            span {
+                background-color: $primary-color;
+                width: 222%;
+                height: 1px;
+                display: block;
+                position: absolute;
+                left: -200%;
+                top: 50%;
+            }
+        }
+
+        #img-box {
+            width: 70%;
+            height: 35vh;
+            display: flex;
+            justify-content: space-between;
+            margin: $large-margin 0;
+
+            img {
+                height: 100%;
+            }
+
+            .img-box-child {
+                position: relative;
+
+                #frame-left {
+                    border: 4px solid $primary-color;
+                    width: 100%;
+                    height: 95%;
+                    position: absolute;
+                    top: -10%;
+                    left: -12%;
+                    z-index: -2;
+                }
+
+                #frame-right {
+                    border: 4px solid $primary-color;
+                    width: 100%;
+                    height: 95%;
+                    position: absolute;
+                    bottom: -10%;
+                    right: -12%;
+                    z-index: -2;
+                }
             }
         }
     }
